lessons/112/1-example/service.yaml
---
# https://github.com/kubernetes-sigs/aws-load-balancer-controller/issues/1695
apiVersion: v1
kind: Service
metadata:
  name: echoserver
  namespace: default
spec:
  ports:
  - port: 8080
    targetPort: 8080
    protocol: TCP
  type: NodePort
  selector:
    app: echoserver

# Instance mode will require at least NodePort service type. With NodePort service type, kube-proxy will open a port on your worker node instances to which the ALB can route traffic.
# Doc references -
# https://kubernetes-sigs.github.io/aws-load-balancer-controller/latest/guide/ingress/spec/
# https://kubernetes-sigs.github.io/aws-load-balancer-controller/latest/guide/ingress/annotations/
